# ai-agent-designer

./: .gitignore  README.md  package-lock.json  package.json
__tests__/lib/: imageUtils.test.ts  promptBuilder.test.ts
__tests__/store/: editorStore.test.ts  projectStore.test.ts
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/routers/: depth.py  generate.py
backend/app/schemas/: depth.py  generate.py
backend/app/services/: depth_estimator.py  prompt_builder.py  seedream.py
backend/tests/: test_prompt_builder.py
docs/superpowers/plans/: 2026-03-26-furnish-mvp.md  2026-03-26-monorepo-refactor.md
docs/superpowers/specs/: 2026-03-26-furnish-mvp-design.md
frontend/: package-lock.json  package.json
frontend/__tests__/store/: editorStore.test.ts  projectStore.test.ts
frontend/src/app/: globals.css  page.tsx
frontend/src/app/editor/: page.tsx
frontend/src/app/generate/: page.tsx
frontend/src/data/: furniture.ts
frontend/src/lib/: db.ts  imageUtils.ts  promptBuilder.ts  seedream.ts
frontend/src/store/: editorStore.ts  projectStore.ts
frontend/src/types/: index.ts
src/app/: layout.tsx  page.tsx
src/app/editor/: page.tsx
src/app/generate/: page.tsx
src/components/editor/: Canvas3D.tsx  PropertyPanel.tsx  Toolbar.tsx
src/components/generate/: FurniturePicker.tsx  PromptEditor.tsx  ResultGallery.tsx  StyleSelector.tsx
src/components/upload/: ImageUploader.tsx
src/data/: furniture.ts
src/lib/: db.ts  promptAgent.ts  promptBuilder.ts  seedream.ts
src/store/: projectStore.ts
src/types/: index.ts
(+8 files in other folders)
